@@ -1,10 +1,9 @@
 use strict;
 use warnings;
-use Test::More tests => 10;
+use Test::More tests => 12;
 use Test::Exception;
 use Cwd;
 use File::Path qw{ make_path };
-use List::MoreUtils qw{ any };
 use Log::Log4perl qw{ :levels };
 use English qw{ -no_match_vars };
 
@@ -21,11 +20,10 @@ Log::Log4perl->easy_init({layout => '%d %-5p %c - %m%n',
                           utf8   => 1});
 
 my $package = 'npg_pipeline::daemon::analysis';
-my $script_name = q[npg_pipeline_central];
 
 use_ok($package);
 
-my $script = join q[/],  $temp_directory, $script_name;
+my $script = join q[/],  $temp_directory, 'npg_pipeline_central';
 `touch $script`;
 `chmod +x $script`;
 my $current_dir = abs_path(getcwd());
@@ -35,11 +33,20 @@ my $dbic_util = t::dbic_util->new();
 my $schema = $dbic_util->test_schema();
 my $test_run = $schema->resultset(q[Run])->find(1234);
 $test_run->update_run_status('analysis pending', 'pipeline',);
-is($test_run->current_run_status_description,
-  'analysis pending', 'test run is analysis pending');
 
-my $folder_path_glob = $test_run->folder_path_glob();
-like($folder_path_glob, qr/\/sf33\//, 'folder path glob correct for a test run');
+my %h = map { $_ => 1 } (1234, 4330, 4999, 5222);
+my @statuses = ();
+for my $r ($schema->resultset(q[Run])->search({})->all()) {
+  my $id = $r->id_run;
+  if ($h{$id}) {
+    cmp_ok ($r->current_run_status_description, 'eq',
+      'analysis pending', "test run $id is analysis pending");
+  } else {
+    push @statuses, $r->current_run_status_description;
+  }
+}
+is (scalar(grep { $_ eq 'analysis pending' } @statuses), 0,
+  'other test runs are not analysis pending');
 
 my $rf_path = '/some/path';
 
@@ -51,78 +58,6 @@ extends 'npg_pipeline::daemon::analysis';
 sub runfolder_path4run { return '/some/path' };
 
 ########test class definition end########
-
-package main;
-
-subtest 'staging host matching' => sub {
-  plan tests => 23;
-
-  my $path49 = '/{export,nfs}/sf49/ILorHSany_sf49/*/';
-  my $path32 = '/{export,nfs}/sf32/ILorHSany_sf32/*/';
-  my $runner;
-  lives_ok { $runner = test_analysis_runner->new(
-      npg_tracking_schema => $schema,
-  )} q{object creation ok};
-  isa_ok($runner, q{test_analysis_runner}, q{$runner});
-  is($runner->pipeline_script_name, $script_name, 'script name');
-  ok(!$runner->dry_run, 'dry_run mode switched off by default');
-
-  my $command_start = 'npg_pipeline_central --verbose --job_priority 50 --runfolder_path';
-
-  like($runner->_generate_command( {
-    rf_path      => $rf_path,
-    job_priority => 50,
-    batch_id     => 1480,
-  } ), qr/$command_start $rf_path/, q{generated command is correct});
-
-  ok($runner->green_host,'running on a host in a green datacentre');
-  ok($runner->staging_host_match($path49), 'staging matches host');
-  ok(!$runner->staging_host_match($path32), 'staging does not match host');
-  throws_ok {$runner->staging_host_match()}
-    qr/Need folder_path_glob to decide whether the run folder and the daemon host are co-located/,
-    'error if folder_path_glob is not defined';
-  ok(!$runner->staging_host_match($folder_path_glob),
-    'staging does not match host for a test run');
-  
-  $schema->resultset(q[Run])->find(2)->update_run_status('analysis pending', 'pipeline',);
-  $schema->resultset(q[Run])->find(3)->update_run_status('analysis pending', 'pipeline',);
-  my @test_runs = ();
-  lives_ok { @test_runs = $runner->runs_with_status('analysis pending') }
-    'can get runs with analysys pending status';
-  ok(scalar @test_runs >= 3, 'at least three runs are analysis pending');
-  foreach my $id (qw/2 3 1234/) {
-    ok((any {$_->id_run == $id} @test_runs),
-      "run $id correctly identified as analysis pending");
-  }
-
-  $runner = test_analysis_runner->new(
-      pipeline_script_name => '/bin/true',
-      npg_tracking_schema  => $schema,
-  );
-  lives_ok { $runner->run(); } q{no croak on $runner->run()};
-
-  local $ENV{PATH} = join q[:], $current_dir.'/t/bin/red', $ENV{PATH};
-  lives_ok { $runner = test_analysis_runner->new(
-      npg_tracking_schema => $schema,
-  )} q{object creation ok};
-  like($runner->_generate_command( {
-    rf_path      => $rf_path,
-    job_priority => 50,
-    batch_id     => 56,
-  }), qr/$command_start $rf_path --id_flowcell_lims 56/,
-    q{generated command is correct});
-  ok(!$runner->green_host, 'host is not in green datacentre');
-  ok(!$runner->staging_host_match($path49), 'staging does not match host');
-  ok($runner->staging_host_match($path32), 'staging matches host');
-  ok($runner->staging_host_match($folder_path_glob),
-    'staging matches host for a test run');
-
-  local $ENV{PATH} = join q[:], $current_dir.'/t/bin/dodo', $ENV{PATH};
-  $runner = test_analysis_runner->new(
-      npg_tracking_schema => $schema,
-  );
-  ok(!$runner->green_host, 'host is not in green datacentre');
-};
 
 ########test class definition start########
 
@@ -138,14 +73,13 @@ sub runfolder_path4run { return '/some/path'; }
 package main;
 
 subtest 'failure to retrive lims data' => sub {
-  plan tests => 2;
+  plan tests => 4;
 
-  local $ENV{PATH} = join q[:], $current_dir.'/t/bin/red', $ENV{PATH};
   my $runner = test_analysis_anotherrunner->new(
-    pipeline_script_name => '/bin/true',
     npg_tracking_schema  => $schema,
   );
-
+  is($runner->pipeline_script_name, 'npg_pipeline_central', 'script name');
+  ok(!$runner->dry_run, 'dry_run mode switched off by default');
   lives_ok { $runner->run(); } 'one run is processed';
   is(scalar keys %{$runner->seen}, 0,
     'no lims link - run is not listed as seen');
@@ -185,15 +119,12 @@ subtest 'generate command' => sub {
 };
 
 subtest 'mock continious running' => sub {
-  plan tests => 6;
+  plan tests => 5;
 
-  local $ENV{PATH} = join q[:], $current_dir.'/t/bin/red', $ENV{PATH};
   my $runner = test_analysis_runner->new(
     pipeline_script_name => '/bin/true',
     npg_tracking_schema  => $schema,
   );
-  ok($runner->staging_host_match($folder_path_glob),
-    'staging matches host for a test run');
   
   lives_ok {
     $runner->run();
@@ -201,7 +132,8 @@ subtest 'mock continious running' => sub {
     $runner->run();
   } q{no croak running through twice - potentially as a daemon process};
 
-  is (join(q[ ],sort keys %{$runner->seen}), '1234', 'correct list of seen runs');
+  is (join(q[ ],sort keys %{$runner->seen}), '1234 4330 4999 5222',
+    'correct list of seen runs');
 
   $runner = test_analysis_runner->new(
     pipeline_script_name => '/bin/true',
@@ -215,7 +147,8 @@ subtest 'mock continious running' => sub {
     $runner->run();
   } q{no croak running (dry) through twice};
 
-  is (join(q[ ],sort keys %{$runner->seen}), '1234', 'correct list of seen runs');
+  is (join(q[ ],sort keys %{$runner->seen}), '1234 4330 4999 5222',
+    'correct list of seen runs');
 };
 
 subtest 'compute runfolder path' => sub {
@@ -234,16 +167,18 @@ subtest 'compute runfolder path' => sub {
   my $runner = $package->new(npg_tracking_schema => $schema);
   is( $runner->runfolder_path4run(1234), $rf, 'runfolder path is correct');
 };
-subtest 'no_auto' => sub {
-  plan tests => 1;
 
-  local $ENV{PATH} = join q[:], $current_dir.'/t/bin/red', $ENV{PATH};
+subtest 'no_auto* tags' => sub {
+  plan tests => 3;
+
   my $test_run;
   $test_run = $schema->resultset(q[Run])->find(1234);
   $test_run->update_run_status('analysis pending', 'pipeline',);
   $test_run = $schema->resultset(q[Run])->find(1235);
+  ok ($test_run->is_tag_set('no_auto_analysis'), 'tag set');
   $test_run->update_run_status('analysis pending', 'pipeline',);
   $test_run = $schema->resultset(q[Run])->find(1236);
+  ok ($test_run->is_tag_set('no_auto'), 'tag set');
   $test_run->update_run_status('analysis pending', 'pipeline',);
 
   my $runner = test_analysis_runner->new(
@@ -253,8 +188,8 @@ subtest 'no_auto' => sub {
 
   $runner->run();
 
-  is (join(q[ ],sort keys %{$runner->seen}), '1234', 'runs with no_auto and no_auto_analysis not seen');
-
+  is (join(q[ ],sort keys %{$runner->seen}), '1234 4330 4999 5222',
+    'runs with no_auto and no_auto_analysis not seen');
 };
 
 1;
