@@ -1,3 +1,0 @@
-#!/bin/bash
-echo 'default_gateway=172.17.126.1'
-echo 'site_iface=site'
